bynkc/tests/fixtures/positive/123_http_get_path_param/src/orders.bynk
context orders

type OrderId = opaque String

service api from http {
  on GET("/orders/:id") by v: Visitor (id: OrderId) -> Effect[HttpResult[String]] {
    Ok("an order")
  }
}
