bynkc/tests/fixtures/negative/97_http_get_with_body/src/svc.bynk
context svc

type Payload = {
  name: String,
}

service api from http {
  on GET("/items") by v: Visitor (body: Payload) -> Effect[HttpResult[String]] {
    Ok("hello")
  }
}
